fixed typewriter animation -- need to fix new bug with the spacing

--- a/borodaenko/styles/styles.css
+++ b/borodaenko/styles/styles.css
@@ -445,7 +445,7 @@ p {
 }
 
 .project-square p {
-  font-size: 1.5rem;ad
+  font-size: 1.5rem;
 }
 
 .invisible-typewriter {
